--- a/templates/service.yaml
+++ b/templates/service.yaml
@@ -1,12 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "web.fullname" . }}
+  name: {{ .Release.Name }}-web
+  namespace: {{ .Release.Namespace }} 
 spec:
   type: {{ .Values.service.type }}
   ports:
     - port: {{ .Values.service.port }}
-      targetPort: 3000
+      targetPort: 8080
       nodePort: {{ .Values.service.nodePort }}
   selector:
-    app: {{ include "web.fullname" . }}
+    app: {{ .Release.Name }}-web
